--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ __pycache__/
 
 # C extensions
 *.so
+*.json
 
 # Distribution / packaging
 .Python
@@ -127,3 +128,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+*.zip
