--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ __pycache__/
 
 # C extensions
 *.so
-*.json
 
 # Distribution / packaging
 .Python
@@ -31,8 +30,7 @@ config/
 server/world/
 server/world_nether/
 server/world_the_end/
-*.yml
-
+server/logs/
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
